--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
     <title>Vuexy - Vuejs Admin Dashboard Template</title>
   </head>
   <body>
